package org.restabs.springbootrestabs.exception;

public class NullPrimaryKeyInGetByIdException extends RuntimeException {
}
