package org.restabs.springbootrestabs.exception;

public class NullPrimaryKeyInUpdateException extends RuntimeException {
}
